--- a/openshift/temp_backup-shared.yaml
+++ b/openshift/temp_backup-shared.yaml
@@ -49,13 +49,18 @@ objects:
         claimName: ${PVC_NAME}
     - name: pvc-backup-data
       persistentVolumeClaim:
-        claimName: backup
+        claimName: ${PVC_BCK}
   status: {}
 parameters:
 - description: PVC you want to back up.
   displayName: PVC Name
   name: PVC_NAME
   required: true
+- description: PVC for this BackupEr pod.
+  displayName: PVC Backup
+  name: PVC_BCK
+  required: true
+  value: backup 
 - description: relative path of the folder you want to make a backup. Example 
     your volume mount point - /data
     folder you want to backup - /data/private/bck
