- Dockerfile: fixed `yum` command - Added `tar.gz` file to easily import to a docker registry (quay.io for ex.)

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -14,7 +14,7 @@ RUN \
   echo "${USER_PASS}" | passwd rsyncuser --stdin
 
 RUN \
-  yum rsync -y install \
+  yum install rsync -y && \
   yum clean all
 
 COPY backup.sh $IMAGE_SCRIPTS_HOME/
