Templates improvements: - ServiceAccount object - quay.io link

--- a/openshift/temp_backup-shared.yaml
+++ b/openshift/temp_backup-shared.yaml
@@ -24,7 +24,7 @@ objects:
         value: ${PVC_NAME}
       - name: BCK_FOLDER
         value: ${BCK_FOLDER}        
-      image: dev/backup:latest
+      image: quay.io/josgonza/pvc-backup:latest
       imagePullPolicy: IfNotPresent
       name: backup-shared
       resources: {}
@@ -50,7 +50,10 @@ objects:
     - name: pvc-backup-data
       persistentVolumeClaim:
         claimName: ${PVC_BCK}
-  status: {}
+- apiVersion: v1
+  kind: ServiceAccount
+  metadata:
+    name: pvc-backup-deployer
 parameters:
 - description: PVC you want to back up.
   displayName: PVC Name
