Role-Based Access to SCCs functionality (GA in OCP 3.11) has been added: - New templates to use this improvement (xxx_3.11.yaml) - ClusterRole to use this improvement - New templates adding the ServiceAccount object

--- a/openshift/temp_backup-block_3.11.yaml
+++ b/openshift/temp_backup-block_3.11.yaml
@@ -11,6 +11,25 @@ metadata:
   name: backup-block
 objects:
 - apiVersion: v1
+  kind: ServiceAccount
+  metadata:
+    labels:
+      template: backup-block
+    name: pvc-backup-deployer
+- apiVersion: v1
+  groupNames: []
+  kind: RoleBinding
+  metadata:
+    labels:
+      template: backup-block  
+    name: backupers
+  roleRef:
+    kind: ClusterRole
+    name: backuper
+  subjects:
+  - kind: ServiceAccount
+    name: pvc-backup-deployer    
+- apiVersion: v1
   kind: Pod
   metadata:
     generateName: pvc-backup-block-
